--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-1.png" 
+                        <img src="./assets/AI-00.webp" 
                         alt="Project 1" 
                         class="project-img">
                     </div>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-2.png" 
+                        <img src="./assets/UX_Design.webp" 
                         alt="Project 2" 
                         class="project-img">
                     </div>
@@ -234,16 +234,16 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-3.png" 
+                        <img src="./assets/Enterprisecomputing.webp" 
                         alt="Project 3" 
                         class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project 3</h2>
+                    <h2 class="experience-sub-title project-title">Upcoming Third Year Dissertation Project</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/zacpalmer12/IBM-Project-UNI.git', '_blank')">
+                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/zacpalmer12', '_blank')">
                             GitHub
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/zacpalmer12/IBM-Project-UNI.git', '_blank')">
+                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/zacpalmer12t', '_blank')">
                             Live Demo 
                         </button>
                     </div>
