Website Needs Clearance Brfore Deployement

--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
                     <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
                 </div>
                 <div id="socials-container">
-                    <img src="./assets/linkedin.png" alt="My linkedin profile "
-                    class="icon" onclick="location.href='https://www.linkedin.com/in/zac-palmer-804b92369/'">
+                    <a href="https://www.linkedin.com/in/zac-palmer-804b92369/" target="_blank">
+                        <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon">
+                    </a>
 
-                    <img src="./assets/github.png" alt="My github profile "
-                    class="icon" onclick="location.href='https://github.com/zacpalmer12'">
+                    <a href="https://github.com/zacpalmer12" target="_blank">
+                        <img src="./assets/github.png" alt="My GitHub profile" class="icon">
+                    </a>
                 </div>
             </div>
         </section> 
@@ -76,14 +78,17 @@
                         <div class="details-container">
                             <img src="./assets/education.png" alt="education Icon" class="icon">
                             <h3>Education</h3>
-                            <p>Year 3 Student at University of Leicester<br>Finished second year with First-Class Honours</p>
+                            <p>Third-year Student at University of Leicester<br>Achieved First-Class Honours in my second year of study.</p>
                         </div>
                     </div>
                     <div class="text-container">
-                        <p>Hello! I'm Zac, a third-year Software Engineering student at the University of Leicester.
-                             With a passion for coding and problem-solving, I have honed my skills in front-end development through both 
-                             academic projects and real-world experience. I thrive in collaborative environments and am always eager to 
-                             learn new technologies and methodologies.</p>
+                        <p>Hi, I’m Zac! I’m a third-year Software Engineering student at the University of Leicester with a passion for backend development,
+                             especially in Java. I love tackling complex problems, designing efficient systems, and turning ideas into reliable, scalable solutions.
+                              Alongside backend work, I’ve also gained front-end experience, which helps me approach projects with a full-stack perspective.
+                            Growing up in France near the Pyrenees meant being surrounded by English, French, and Spanish speakers, 
+                            which gave me a lasting appreciation for diverse cultures and ways of thinking. Outside of coding, 
+                            you’ll usually find me on the pitch playing football or rugby, or up in the mountains enjoying skiing and snowboarding. 
+                            I’m always excited to take on new challenges and projects - Feel free to reach out!</p>
                     </div>
                 </div>
             </div>
@@ -227,8 +232,8 @@
                         <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/zacpalmer12/Course_Registration_Android_App.git', '_blank')">
                             GitHub
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/zacpalmer12/Course_Registration_Android_App.git', '_blank')">
-                            User Manual
+                        <button class="btn btn-color-2 project-btn" onclick="window.open('./assets/Android_App_User_Manual.pdf')">User Manual
+                        
                         </button>
                     </div>
                 </div>
@@ -238,13 +243,13 @@
                         alt="Project 3" 
                         class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Upcoming Third Year Dissertation Project</h2>
+                    <h2 class="experience-sub-title project-title">Third Year Project - Has Not Been Started Yet</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/zacpalmer12', '_blank')">
                             GitHub
                         </button>
-                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/zacpalmer12t', '_blank')">
-                            Live Demo 
+                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/zacpalmer12', '_blank')">
+                            User Manual
                         </button>
                     </div>
                 </div>
