--- a/index.html
+++ b/index.html
@@ -132,6 +132,15 @@
                                     <p>Working Knowledge</p>
                                 </div>
                             </article>
+                            <article>
+                                <img src="./assets/checkmark.png"
+                                alt="experience icon" 
+                                class="icon"/>
+                                <div>
+                                    <h3>JavaScript</h3>
+                                    <p>Beginner</p>
+                                </div>
+                            </article>
 
                         </div>
                     </div>
@@ -191,8 +200,8 @@
                                 alt="experience icon" 
                                 class="icon"/>
                                 <div>
-                                    <h3>Git</h3>
-                                    <p>Proficient</p>
+                                    <h3>Postamn</h3>
+                                    <p>Working Knowledge</p>
                                 </div>
                             </article>
                         </div>
@@ -243,7 +252,7 @@
                         alt="Project 3" 
                         class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Third Year Project - Has Not Been Started Yet</h2>
+                    <h2 class="experience-sub-title project-title">Third Year Project - To be finished</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/zacpalmer12', '_blank')">
                             GitHub
