--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>My Portfolio</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="mediaqueries.css">
+        <link rel="icon" type="image/jpg" href="assets/profile-pic-5-square.jpg">
+
 
     </head>
     <body>
