fixed an image issue

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>My Portfolio</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="mediaqueries.css">
-        <link rel="icon" type="image/jpg" href="assets/profile-pic-5-square.jpg">
+        <link rel="icon" type="image/png" href="./assets/profile-pic-8.png">
 
 
     </head>
@@ -40,7 +40,7 @@
         </nav>  
         <section id="profile">
             <div class="section__pic-container">
-                <img src="./assets/profile-pic-7.png" alt="NEED TO CHANGE THIS">
+                <img src="./assets/profile-pic-website.png" alt="Zac Palmer Profile Picture">
             </div>
             <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
