--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta property="og:title" content="Zac Palmer Portfolio">
+        <meta property="og:description" content="Check out my portfolio website">
+        <meta property="og:image" content="https://zac-palmer.org/assets/profile-pic-website.png">
+
+        <meta property="og:url" content="https://zac-palmer.org/">
+        <meta property="og:type" content="website">
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Portfolio</title>
