--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta property="og:title" content="Zac Palmer Portfolio">
         <meta property="og:description" content="Check out my portfolio website">
-        <meta property="og:image" content="https://zac-palmer.org/assets/profile-pic-website.png">
-
         <meta property="og:url" content="https://zac-palmer.org/">
         <meta property="og:type" content="website">
+        <meta property="og:image" content="https://zac-palmer.org/assets/profile-pic-website.png">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
+
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
