modified arrow to appear on profile section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     </a>
                 </div>
             </div>
+            <img src="./assets/arrow.png" alt="arrow-icon" class="icon arrow"onclick="location.href='./#about'">
         </section> 
         <section id="about">
             <p class="section__text__p1">Get To Know More</p>
@@ -94,8 +95,8 @@
                     </div>
                     <div class="text-container">
                         <p>Hi, I’m Zac! I’m a third-year Software Engineering student at the University of Leicester with a passion for backend development,
-                             especially in Java. I love tackling complex problems, designing efficient systems, and turning ideas into reliable, scalable solutions.
-                              Alongside backend work, I’ve also gained front-end experience, which helps me approach projects with a full-stack perspective.
+                            especially in Java. I love tackling complex problems, designing efficient systems, and turning ideas into reliable, scalable solutions.
+                            Alongside backend work, I’ve also gained front-end experience, which helps me approach projects with a full-stack perspective.<br>
                             Growing up in France near the Pyrenees meant being surrounded by English, French, and Spanish speakers, 
                             which gave me a lasting appreciation for diverse cultures and ways of thinking. Outside of coding, 
                             you’ll usually find me on the pitch playing football or rugby, or up in the mountains enjoying skiing and snowboarding. 
