--- a/index.html
+++ b/index.html
@@ -94,13 +94,17 @@
                         </div>
                     </div>
                     <div class="text-container">
-                        <p>Hi, I’m Zac! I’m a third-year Software Engineering student at the University of Leicester with a passion for backend development,
-                            especially in Java. I love tackling complex problems, designing efficient systems, and turning ideas into reliable, scalable solutions.
-                            Alongside backend work, I’ve also gained front-end experience, which helps me approach projects with a full-stack perspective.<br>
-                            Growing up in France near the Pyrenees meant being surrounded by English, French, and Spanish speakers, 
-                            which gave me a lasting appreciation for diverse cultures and ways of thinking. Outside of coding, 
-                            you’ll usually find me on the pitch playing football or rugby, or up in the mountains enjoying skiing and snowboarding. 
-                            I’m always excited to take on new challenges and projects - Feel free to reach out!</p>
+                        <p>
+                        Hi, I’m Zac! I’m a third-year Software Engineering student at the University of Leicester with a passion for backend development, 
+                        especially in Java. I love tackling complex problems, designing efficient systems, and turning ideas into reliable, scalable solutions. 
+                        My backend experience also includes cyber security elements such as implementing encryption and hashing, managing secure authentication 
+                        with Java-based frameworks, and applying input validation to prevent common vulnerabilities. Alongside backend work, I’ve also gained 
+                        front-end experience, which helps me approach projects with a full-stack perspective.<br>
+                        Growing up in France near the Pyrenees meant being surrounded by English, French, and Spanish speakers, which gave me a lasting 
+                        appreciation for diverse cultures and ways of thinking. Outside of coding, you’ll usually find me on the pitch playing football or 
+                        rugby, or up in the mountains enjoying skiing and snowboarding. I’m always excited to take on new challenges and projects <br> Feel free 
+                        to reach out! Links are in Contact section.
+                        </p>
                     </div>
                 </div>
             </div>
