--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h1 class="title">Zac Palmer</h1>
                 <p class="section__text__p2">A Software Engineer</p>
                 <div class="btn-container">
-                    <button class="btn btn-color-2" onclick="window.open('./assets/Resume_SWE_Aug_2025 - Copy.pdf')">Download CV</button>
+                    <button class="btn btn-color-2" onclick="window.open('./assets/Zac Palmer.docx')">Download CV</button>
                     <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
                 </div>
                 <div id="socials-container">
