--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                         alt="Project 3" 
                         class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Third Year Project - To be finished</h2>
+                    <h2 class="experience-sub-title project-title">Art gallery explorer in Unity</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/zacpalmer12', '_blank')">
                             GitHub
