--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                 alt="experience icon" 
                                 class="icon"/>
                                 <div>
-                                    <h3>Postamn</h3>
+                                    <h3>Postman</h3>
                                     <p>Working Knowledge</p>
                                 </div>
                             </article>
